# distributed-auction-system

./: .env.example  .gitignore  README.md  VIVA.md  docker-compose.yml  exc_test_main.py  exc_test_server.py  pyproject.toml
.github/workflows/: testing.yml
auction_system/: main.py  server.py
auction_system/auth/: authenticator.py
auction_system/client/: app.py  home.py
auction_system/client/components/: connections.py  states.py
auction_system/client/pages/: 02_🛒_Buyer.py  03_🏬_Seller.py  04_📇_About.py
auction_system/database/: __init__.py  models.py  schemas.py
auction_system/models/: database.py
auction_system/server/: main.py
auction_system/server/auth/: authenticator.py
auction_system/server/database/: __init__.py  models.py  schemas.py
auction_system/server/remote_methods/: auctions_bid_objects.py  main.py
auction_system/server/remote_objects/: auctions_bids.py  authenticator.py
auction_system/utils/: constants.py  directories.py  encryptions.py  extentions.py
docs/: auctions_class_diagram.md  auth_class_diagram.md  erDiagram.md  home_page_flow.md
docs/mermaid/: auctions_class_diagram.mermaid  authentication_class_diagram.mermaid  erDiagram.mermaid  home_page_flow.mermaid
scripts/: run-client.sh  run-linters.sh  run-server.sh  run-test.sh  run-tests.sh
