[tool.poetry]
name = "auction-system"
version = "0.1.0"
description = ""
authors = ["se7en <gideon.ahiadzi@gmail.com>"]
readme = "README.md"
packages = [{include = "auction_system"}]

[tool.poetry.dependencies]
python = "^3.11"
pyro4 = "^4.82"
streamlit = "^1.24.1"
python-dotenv = "^1.0.0"
werkzeug = "^2.3.6"
sqlalchemy = "^2.0.18"
marshmallow-sqlalchemy = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
faker = "^18.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
